<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Genera/Global -->
    <string name="app_name">flapCHECK</string>
    <string name="button_ok">OK</string>
    <string name="button_done">DONE</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_reset">Reset</string>
    <string name="title_activity_measurement">MeasurementActivity</string>
    <string name="title_activity_patient_entry">PatientEntryActivity</string>

    <!-- Splash Screen -->
    <string name="splash_title_flap">flap</string>
    <string name="splash_title_check">check</string>
    <string name="splash_start_button">Start</string>
    <string name="splash_text">Integrated system for monitoring tissue flap perfusion</string>

    <!-- Main Activity -->
    <string name="main_frag_title">MainFragment</string>
    <string name="measure_button">MeasureActivity</string>
    <string name="patient_entry_button">PatientEntryActivity</string>

    <!-- Measurement Fragment -->
    <string name="select_measurement">Select Measurement</string>
    <string name="temperature_button">Temperature</string>
    <string name="colour_button">Colour</string>
    <string name="cap_refill_button">Capillary Refill</string>
    <string name="pulse_button">Pulse</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_button">Picture</string>

    <!-- TakePhoto Fragment -->
    <string name="capture_photo_button">Capture</string>
    <string name="action_settings">Settings</string>
    <string name="take_photo_instructions">Centre flap in green region</string>

    <!-- MeasureVideo Fragment -->
    <string name="take_video_instructions">Centre flap in video and record.  Keep device steady.</string>
    <string name="take_video">Take Video</string>

    <!-- PatientEntry Activity -->
    <string name="title_PE_new">New</string>
    <string name="title_PE_archived">Archived</string>

    <!-- PatientEntryNew Fragment -->
    <string name="text_name">Patient\'s Name</string>
    <string name="text_mrn">Patient\'s MRN</string>
    <string name="text_opDateTime">Time out of surgery</string>
    <string name="hint_name">enter name</string>
    <string name="hint_mrn">enter MRN</string>
    <string name="hint_opDate">format current date</string>
    <string name="hint_opTime">format current time</string>
    <string name="button_addPatient">DONE</string>

    <!-- PatientEntryNew Fragment -->
    <string name="text_PE_archive_Item">Patient</string>
    <string name="text_PE_archive_Date">Date of OR</string>

    <!-- SelectItemDialogFragment -->
    <string name="dialog_select_instr">Select an action</string>
    <string name="dialog_select_option1">Take Measurement</string>
    <string name="dialog_select_option2">Review</string>
    <string name="title_activity_node_connection">NodeConnectionActivity</string>

    <!-- DialogSelectPatient -->
    <string name="dialog_select_patient_title">Select a patient</string>
    <string name="dialog_select_patient_spinner_prefix">Patient:</string>
    <string name="dialog_select_patient_new_patient">Add New Patient</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- MainReviewFragment -->
    <string name="review_title">Review Measurements</string>
    <string name="review_select_patient">Patient:</string>
    <string name="title_activity_review">ReviewActivity</string>

    <!-- ReviewPhotosFragment & ReviewPhotosPageFragment -->


    <!-- NodeThermaFragment -->
    <string name="text_temp_card_heading">TEMPERATURE</string>
    <string name="button_capture_therma">Capture</string>
    <string name="ir_leds">IR Leds</string>
    <string name="irToggle_turn_on">IR ON</string>
    <string name="irToggle_turn_off">IR OFF</string>

    <!-- NodeChromaFragment -->
    <string name="textChromaHeading">Place NODE colour sensor on flap and record</string>
    <string name="button_single_scan">Scan Color</string>

    <!-- ReviewColourCard -->
    <string name="text_latest_colour">Last reading</string>
    <string name="text_colour_card_heading">COLOUR</string>

    <!-- ReviewPhotoCard -->
    <string name="text_picture_card_heading">PHOTOS</string>
    <string name="text_picture_card_img1_caption">Original</string>
    <string name="text_picture_card_img2_caption">Latest</string>-----

    <!-- ReviewCapRefill Card -->
    <string name="text_cap_refill_card_heading">CAPILLARY REFILL</string>
    <string name="text_cap_refill_card_img1_caption">Original</string>
    <string name="text_cap_refill_card_img2_caption">Latest</string>


    <!-- ReviewPulseCard -->
    <string name="text_pulse_card_heading">PULSE</string>
    <string name="text_pulse_card_img1_caption">Original</string>
    <string name="text_pulse_card_img2_caption">Latest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ReviewThermaFragment -->
    <string name="text_review_therma_heading">TEMPERATURE</string>

    <!-- ReviewChromaFragment -->
    <string name="text_review_chroma_heading">Select a marker to view the colours associated with it.</string>

    <!-- ReviewCapRefillFragment -->
    <string name="text_review_caprefill_heading">CAPILLARY REFILL</string>

    <!-- ReviewPulseFragment -->
    <string name="text_review_pulse_heading">PULSE</string>

    <!-- ReviewPhotoFragment -->
    <string name="text_review_photo_heading">PHOTO</string>

    <!-- MeasureOverlayFragment -->
    <string name="image_overlay_heading_measure">Select a marker and take measurement</string>
    <string name="image_overlay_heading_patient">You must first select a patient</string>
    <string name="image_overlay_heading_photo">You must take a photo</string>
    <string name="image_overlay_heading_points">Choose 3 points on the flap</string>

</resources>
