<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@color/fc_background"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_measurement"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/fc_dark_gray"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <Button
                android:id="@+id/temperature_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_button"
                android:drawableEnd="@drawable/ic_temperature"
                android:gravity="left|center_vertical"
                android:textColor="@color/fc_blue"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:id="@+id/colour_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colour_button"
                android:drawableEnd="@drawable/ic_colour"
                android:gravity="left|center_vertical"
                android:textColor="@color/fc_blue"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <Button
                android:id="@+id/cap_refill_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cap_refill_button"
                android:drawableEnd="@drawable/ic_caprefill"
                android:gravity="left|center_vertical"
                android:textColor="@color/fc_blue"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            >
            <Button
                android:id="@+id/pulse_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulse_button"
                android:drawableEnd="@drawable/ic_pulse"
                android:gravity="left|center_vertical"
                android:textColor="@color/fc_blue"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/fc_dark_gray"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            >
            <Button
                android:id="@+id/photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_button"
                android:drawableEnd="@drawable/ic_photo"
                android:gravity="left|center_vertical"
                android:textColor="@color/fc_blue"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>